# wenyan-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  pnpm-workspace.yaml
src/: chunk.rs  compiler.rs  debug.rs  interner.rs  interpreter.rs  lib.rs  main.rs  memory.rs  object.rs  opcode.rs  position.rs  scanner.rs  statements.rs  token.rs  value.rs  vm.rs
src/convert/: hanzi2num.rs  mod.rs
src/tokenize/: keywords.rs  mod.rs  position.rs  scanner.rs  token.rs
src/tokenize/snapshots/: wenyan_rs__tokenize__keywords__ordered_keywords.snap  wenyan_rs__tokenize__keywords__test__ordered_keywords.snap  wenyan_rs__tokenize__scanner__test__「「一·三五.snap  wenyan_rs__tokenize__scanner__test__「「一·三五」.snap  wenyan_rs__tokenize__scanner__test__「甲.snap  wenyan_rs__tokenize__scanner__test__一百三十五.snap  wenyan_rs__tokenize__scanner__test__吾有一数.snap  wyr__tokenize__keywords__test__ordered_keywords.snap  wyr__tokenize__keywords__test__ordered_keywords.snap.new  wyr__tokenize__scanner__test__「「一·三五」」.snap  wyr__tokenize__scanner__test__「甲」.snap  wyr__tokenize__scanner__test__『一·三五』.snap  wyr__tokenize__scanner__test__一·三五.snap  wyr__tokenize__scanner__test__吾有一数.snap  wyr__tokenize__scanner__test__吾有一言.snap  wyr__tokenize__scanner__test__書之.snap  wyr__tokenize__scanner__test__有數一名之曰「丙」.snap  wyr__tokenize__scanner__test__若二等於二者加一以五書之云云.snap  wyw__tokenize__keywords__test__ordered_keywords.snap  wyw__tokenize__scanner__test__「「一·三五」.snap  wyw__tokenize__scanner__test__「「一·三五」」.snap  wyw__tokenize__scanner__test__加一以二.snap  wyw__tokenize__scanner__test__昔之「甲」者今一是矣.snap
tests/: cli.rs
tests/expected/: basic-type.out.txt  basic-type.out.wy  binary-if-statement.out.wy  binary-statement.out.txt  binary-statement.out.wy  bool-algebra-statement.out.txt  declare-statement.out.txt  define-statement.out.txt  for-enum-statement.out.txt  for-statement.out.txt  fun-statement.out.txt  if-statement.out.txt  if-statement.out.wy  multiplication-table.out.txt
tests/inputs/: assign-statement.wy  basic-type.wy  binary-if-statement.wy  binary-statement.wy  bool-algebra-statement.wy  boolean-algebra-statement.wy  declare-statement.wy  define-statement.wy  demo.wy  factorial.wy  for-enum-statement.wy  for-statement.wy  fun-statement.wy  if-statement.wy  local-define-statement.wy  multiplication-table.wy  unary-statement.wy
web/: package.json  pnpm-lock.yaml
web/playground/: package.json  vite.config.ts
web/playground/src/: main.tsx
